# Simple-Management-WebAPP

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt  temp.esdl
app/: DRY.py  client.py  helper.py  login.py  main.py  register.py  routeUser.py  util.py
app/Model/: __init__.py  action.py  auditable.py  client.py  clients.py  data.yaml  finance.py  people.py  register.py  scheduler.py  service.py  transactions.py  user.py  utils.py
app/Queries/: add_conta_to_user.esdl  add_endereco_to_anyone.esdl  add_evento_to_anyone.esdl  add_telefone_to_anyone.esdl  auditable.post_one.esdl  auditable_get_all.esdl  auditable_get_one.esdl  change_password.esdl  count_clients.esdl  create_log.esdl  create_pessoa_fisica.esdl  create_pessoa_juridica.esdl  create_user.esdl  delete_one_Client.esdl  login_user.esdl  people_delete_one.esdl  people_get_all.esdl  people_get_num.esdl  people_get_one.esdl  read_all_clients.esdl  read_all_log.esdl  read_one_log.esdl  update_pessoa_fisica.esdl  update_pessoa_juridica.esdl  update_user.esdl
app/Routes/: user.py
app/Service/: __init__.py  client.py  finance.py  scheduler.py  service.py  user.py
app/View/: __init__.py  client.py  finance.py  scheduler.py  service.py  user.py
app/queries/: createBankAccount_async_edgeql.py  createClient_async_edgeql.py  create_peopleAddress_async_edgeql.py  create_peoplePhone_async_edgeql.py  create_userBankAccount_async_edgeql.py  create_user_async_edgeql.py  deleteBankAccount_async_edgeql.py  delete_peopleAddress_async_edgeql.py  delete_peoplePhone_async_edgeql.py  delete_userBankAccount_async_edgeql.py  getAllClients_async_edgeql.py  getClient_async_edgeql.py  getUser_async_edgeql.py  login_user_async_edgeql.py  read_user_async_edgeql.py  retrieve_balance_async_edgeql.py  updateBankAccount_async_edgeql.py  updateClient_async_edgeql.py  update_peopleAddress_async_edgeql.py  update_peoplePhone_async_edgeql.py  update_userBankAccount_async_edgeql.py  update_user_async_edgeql.py
app/util/: auth.py  database.py  variables.py
dbschema/: default.esdl  default.gel
dbschema/migrations/: 00001-m12qq4d.edgeql  00002-m1q7ny2.edgeql  00003-m1yjptc.edgeql  00004-m1kixga.edgeql  00005-m1qcgqz.edgeql  00006-m1mk2nu.edgeql  00007-m1yanfo.edgeql  00008-m133tpc.edgeql  00009-m1vtfnr.edgeql  00010-m1jr3cb.edgeql
docs/: NavigationMap.drawio
static/js/: client.js  (+4 more)
tests/: conftest.py  test_app.py  test_client.py  test_service.py  test_user.py
(+126 files in other folders)
